--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                             <header class="card-panel">
                                 <div class="row">
                                       <div>
-                                         <div class="col s5 m1 l2">
-                                            <img class="responsive-img" src="test.png"></div>
+                              
                                           <div class="col s12 m8 l9">
                                             <div class="card" style="background-color:#F5F7F8 ">
                                               <div class="card-content grey-text">
                                                 <span class="card-title">Développeur Logiciel</span>
-                                                      <p>Nouveau dans le domaine de la programation , je me suis lancé dans la création de  
-                                                          <em>hello-world</em> dans tous les languages connus.
+                                                      <p>Nouveau dans le domaine de la programation, désireux d'apprendre et
+                                                      de concevoir.
+                                                        
                                                       </p>
                                               </div>
                                             </div>
