--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                                           <div class="col s12 m8 l8">
                                             <div class="card" style="background-color:#F5F7F8 ">
                                               <div class="card-content grey-text">
-                                                      <p>Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych, jak Aldus PageMaker  
+                                                      <p>Nouveau dans le domaine de la programation, désireux d'apprendre et
+                                                      de concevoir.   
                                                       </p>
                                               </div>
                                             </div>
@@ -65,7 +66,7 @@
                                         <td>Projet de création d'une "to do list"</td>
                                     </tr>
                                     <tr>
-                                        <td><h5><a href="https://github.com/Valannos/ToListen-Express.js">Afpa-Bay</a></h5>
+                                        <td><h5><a href="#">Afpa-Bay</a></h5>
                                             <i class="devicon-symfony-original colored medium"></i>
                                         </td>
                                         <td>Projet de création d'un site de reférencement de tutoriels.</td>
