--- a/index.html
+++ b/index.html
@@ -37,11 +37,20 @@
         <div class="card-panel" >
                                               <i class="fa fa-user-circle" aria-hidden="true"></i>
                                               <span class="title">Konrad Krolikowski<br/>22 ans</span> <br/>
-                                              <span>Brest,France<br/></span>
+                                              <li class="collection-item valign-wrapper">
+                                              <i class="fa fa-map-marker small" aria-hidden="true"></i>
+                                              <span>&nbsp;Brest,France<br/></span>
+                                              </li>
+                                               <li class="collection-item valign-wrapper">
+                                              <i class="fa fa-download small" aria-hidden="true"></i>                                             
+                                              <span class="badge"> <a href="Cv Konrad.odt">CV format PDF</a></span><br/>
+                                              </li>
                                               <li class="collection-item valign-wrapper">
                                               <i class="fa fa-envelope-o small" aria-hidden="true"></i>
                                               <span class="badge"> <a href="mailto:k.kroliko29@gmail.com">Email</a></span>
-                                              <span class="badge"> <a href="Cv Konrad.odt">Cv format pdf</a></span>
+                                         
+                                              
+
                                           </li>
         </div>  
     </div>
