--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                             <div class="col s12 m8 l9">
                                             <div class="card" style="background-color:#F5F7F8 ">
                                               <div class="card-content grey-text">
-                                                <span class="card-title center">Développeur Logiciel Junior</span>
+                                                <span class="card-title center">Développeur Logiciel Junior</span> <i class="fa fa-leaf" aria-hidden="true"></i>
+
                                               </div>
                                             </div>
                             </div>
@@ -42,7 +43,7 @@
                                              	</li></br>
                                               	<li class="collection-item valign-wrapper">
                                              	 	<i class="fa fa-download small" aria-hidden="true"></i>                                             
-                                              		<span class="badge"> <a href="Cv Konrad.odt">CV format PDF</a></span><br/>
+                                              		<span class="badge"> <a href="CvKonrad.pdf">CV format PDF</a></span><br/>
                                               	</li>
                                               	<li class="collection-item valign-wrapper">
 		                                            <i class="fa fa-envelope-o small" aria-hidden="true"></i>
