--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                             <div class="col s12 m8 l9">
                                             <div class="card" style="background-color:#F5F7F8 ">
                                               <div class="card-content grey-text">
-                                                <span class="card-title center">Développeur Logiciel Junior</span> <i class="fa fa-leaf" aria-hidden="true"></i>
-
+                                                <span class="card-title center">Développeur Logiciel Junior &nbsp <i class="fa fa-leaf" aria-hidden="true"></i>
+ </span> 
                                               </div>
                                             </div>
                             </div>
