--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <table class="highlight centered">
                                 <tbody>
                                     <tr>
-                                        <td><h5><a href="https://github.com/kkroliko/AssociationAthletic">Projet Athletic</a></h5>
+                                        <td><h5><a target="_blank" href="https://github.com/kkroliko/AssociationAthletic">Projet Athletic</a></h5>
                                             <i class="fa fa-folder-open small" aria-hidden="true"></i></td>
                                         <td>Projet de création d'un site vitrine pour une association sportive</td>
                                     </tr>
@@ -95,6 +95,12 @@
                                         <i class="devicon-javascript-plain colored medium"></i>
                                     </div>
                                     <div class="col s6">JavaScript</div>
+                                </li>
+                                 <li class="collection-item valign-wrapper row">
+                                    <div class="col s6">
+                                        <i class="devicon-java-plain colored medium"></i>
+                                    </div>
+                                    <div class="col s6">Java</div>
                                 </li>
                                 <li class="collection-item valign-wrapper row">
                                     <div class="col s6">
