--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                              	</li></br>
                                               	<li class="collection-item valign-wrapper">
                                              	 	<i class="fa fa-download small" aria-hidden="true"></i>                                             
-                                              		<span class="badge"> <a href="CvKonrad.pdf">CV format PDF</a></span><br/>
+                                              		<span class="badge"> <a href="KonradKrolikowskiCv.pdf">CV format PDF</a></span><br/>
                                               	</li>
                                               	<li class="collection-item valign-wrapper">
 		                                            <i class="fa fa-envelope-o small" aria-hidden="true"></i>
