--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             <div class="col s12 m8 l9">
                                             <div class="card" style="background-color:#F5F7F8 ">
                                               <div class="card-content grey-text">
-                                                <span class="card-title center">Développeur Logiciel Junior &nbsp <i class="fa fa-leaf" aria-hidden="true"></i>
+                                                <span class="card-title center">Développeur Logiciel <i class="fa fa-leaf" aria-hidden="true"></i>
  </span> 
                                               </div>
                                             </div>
@@ -28,7 +28,7 @@
                                           <div class="col s12 m8 l8">
                                             <div class="card" style="background-color:#F5F7F8 ">
                                               <div class="card-content grey-text">
-                                                      <p>Nouveau dans le domaine de la programation, désireux d'apprendre et
+                                                      <p>Développeur Cobol depuis 2 ans, toujours désireux d'apprendre et
                                                       de concevoir.   
                                                       </p>
                                               </div>
@@ -36,7 +36,7 @@
                                           </div> 
                                           <div class="col s12 m8 l4">
         									<div class="card-panel" style="background-color:#F5F7F8 "> 
-                                             	 	<span class="title">Konrad Krolikowski<br/>23 ans</span> <br/>
+                                             	 	<span class="title">Konrad Krolikowski<br/>26 ans</span> <br/>
                                              	<li class="collection-item valign-wrapper">
 	                                             	
 	                                             	<span>Brest,France</span>
